FEAT: like , dislike and like page liked video data display

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,9 @@ body {
 .app {
   font-family: var(--heading-font);
 }
-
+.height-30 {
+  height: 30vh;
+}
 .strikThroghtBtn span {
   position: relative;
 }
