--- a/src/components/VideoListing/Css/videocard.module.css
+++ b/src/components/VideoListing/Css/videocard.module.css
@@ -2,6 +2,9 @@
   width: 30%;
   flex-grow: 1;
   margin: 1rem;
+  position: relative;
+  overflow: hidden;
+  transition: 0.4s cubic-bezier(0, 0, 0.12, 0.88);
 }
 
 .imgWrapper {
@@ -14,9 +17,37 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transition: 0.3s cubic-bezier(0, 0, 0.12, 0.88);
 }
 
+.iconPlay {
+  position: absolute;
+  background-color: transparent;
+  border: 0;
+  color: var(--text-color);
+  top: 20%;
+  left: -15%;
+  font-size: 2.5rem;
+  transition: 0.4s all ease;
+}
+.iconPlay:hover {
+  font-size: 2.9rem;
+}
+.cardWrapper:hover > .imgWrapper > .iconPlay {
+  left: 50%;
+}
+.crossBtn {
+  position: absolute;
+  background-color: transparent;
+  border: 0;
+  color: var(--text-color);
+  top: 2%;
+  right: 2%;
+  font-size: 1.5rem;
+  transition: 0.18s all ease-in;
+}
+.crossBtn:hover {
+  font-size: 1.7rem;
+}
 .contentWrapper {
   width: 90%;
   margin: auto;
@@ -28,6 +59,8 @@
 .headingdBox {
   font-family: var(--heading-font);
   transition: 0.3s cubic-bezier(0, 0, 0.12, 0.88);
+  font-size: 0.9rem;
+  letter-spacing: 0.1em;
 }
 
 .headingdBox:hover {
