--- a/src/components/Playlist/playlistcard.module.css
+++ b/src/components/Playlist/playlistcard.module.css
@@ -1,6 +1,7 @@
 .cardWrapper {
-  width: 20rem;
+  width: 30%;
   margin: 1rem;
+  flex-grow: 1;
   position: relative;
   overflow: hidden;
   transition: 0.4s cubic-bezier(0, 0, 0.12, 0.88);
@@ -65,4 +66,11 @@
 
 .headingdBox:hover {
   transform: translateX(7px);
+}
+
+@media only screen and (max-width: 700px) {
+  .cardWrapper {
+    width: 90%;
+    margin: auto;
+  }
 }
